# GitHub-Repository-Chat

./: .gitignore  README.md
Backend/: README.md  pyproject.toml
Backend/src/github_repo_chat/: __init__.py  cli.py  config.py
Backend/src/github_repo_chat/generation/: __init__.py
Backend/src/github_repo_chat/indexing/: __init__.py
Backend/src/github_repo_chat/ingestion/: __init__.py  github.py  github_test.py  pytest.ini  scanner.py  scanner_test.py
Backend/src/github_repo_chat/retrieval/: __init__.py
Backend/tests/: test_config.py
Frontend/: index.html  package-lock.json  package.json
docs/: ARCHITECTURE.md  PLAN.md
