[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-repo-chat"
version = "0.1.0"
description = "RAG application for querying GitHub repositories with Gemini embeddings and ChromaDB"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "google-genai>=1.0",
    "chromadb>=0.5",
    "typer>=0.12",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
github-repo-chat = "github_repo_chat.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/github_repo_chat"]

[tool.hatch.build.targets.wheel.sources]
"src/github_repo_chat" = "github_repo_chat"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
